# napi-impl

./: .gitattributes  .gitignore  BUILD.gn  CMakeLists.txt  FAST_CALL_PLAN.md  HERMES_VERSION  PLAN.md  V8_VERSION
.github/workflows/: hermes-ci.yml  jsc-ci.yml  release.yml
ci/: hermes-ci.yml
cmake/: napi_flags.cmake
cmake/modules/: FindHermes.cmake  FindJSC.cmake
cmake/toolchains/: android.cmake  ios.cmake  linux.cmake  windows.cmake
config/: v8_args.yml
gn/: BUILD.gn  napi_flags.gni
gn/exports/: napi_hermes.def  napi_hermes.exp  napi_hermes.lds  napi_jsc.def  napi_jsc.exp  napi_jsc.lds  napi_v8.def  napi_v8.exp  napi_v8.lds
include/napi/: fast_call.h  js_native_api.h  script_cache.h
include/napi_v8/: embedding.h  inspector.h  sab.h  serialize.h
patches/hermes/: 0001-cmake-lit-ctest-case-insensitive-include.patch  0002-node-api-create-function-with-prototype.patch  0003-node-api-adjust-external-memory.patch  0004-node-api-remove-wrap-resets-finalizer.patch  0005-node-api-finalizer-holder-erase-before-invoke.patch  0006-node-api-create-array-with-length-no-eager-alloc.patch  0007-node-api-bigint-words-use-after-scope.patch  0008-node-api-create-typedarray-gc-handle.patch  series
patches/v8/: 0001-build-add-napi-disable-whole-program-vtables-knob.patch  series
scripts/: build.py  build_tests.py  gen_build_info.py  gen_export_list.py  package_android.py  package_apple.py  package_cmake.py  run_tests.py  setup.py  setup_hermes.py  split_napi_v8.py  sync_napi_headers.py  sync_napi_tests.py  test_inspector.py  test_inspector_heap.py  test_inspector_pause.py
src/: .clang-format  BUILD.gn  CMakeLists.txt
src/common/: BUILD.gn  CMakeLists.txt  fast_call_fallback.cc  script_cache_fallback.cc  sources.txt
src/hermes/: CMakeLists.txt  napi_hermes_engine.cc  sources.txt
src/jsc/: CMakeLists.txt  js_native_api_jsc.cc  js_native_api_jsc.h  jsc_buffers.cc  jsc_object.cc  jsc_v8compat.cc  napi_jsc_engine.cc  sources.txt
src/v8/: BUILD.gn  array.cc  arraybuffer.cc  bigint.cc  date.cc  error.cc  fast_call.cc  function.cc  instance.cc  internals.cc  js_native_api_v8.cc  js_native_api_v8.h  js_native_api_v8_impl.h  js_native_api_v8_internals.h  napi_v8_engine.cc  object.cc  promise.cc  reference.cc  sab.cc  scope.cc  script.cc  script_cache.cc  serialize.cc  sources.txt  string.cc  symbol.cc  value.cc  wrap.cc
src/v8/inspector/: BUILD.gn  bridge.cc  bridge.h  inspector_api.cc  server.cc  server.h  websocket.cc  websocket.h
test/: BUILD.gn  fast_call_fallback_gtest.cc  fast_call_smoke.cc  hermes_smoke.cc  js_native_api_suite_gtest.cc  jsc_buffers.cc  jsc_gtest_fixture.h  jsc_smoke.cc  jsc_v8compat.cc  jsc_weakref.cc  multi_runtime_gtest.cc  napi_core_gtest.cc  napi_gtest_fixture.h  napi_more2_gtest.cc  napi_more_gtest.cc  napi_object_gtest.cc  napi_typedarray_gtest.cc  node_api_extras_gtest.cc  run.cc  runner.cc  script_cache_gtest.cc  serialize_gtest.cc  wrap_bench.cc
