# Shared GN config for all napi-impl targets.
# Imported into //napi/src/*/BUILD.gn via configs.

import("//napi/gn/napi_flags.gni")

config("napi_flags") {
  cflags_cc = [
    "-std=c++20",
    "-fvisibility=hidden",
    "-fvisibility-inlines-hidden",
    "-fno-exceptions",
    "-fno-rtti",
  ]
  defines = [
    "NAPI_EXPERIMENTAL",
    "BUILDING_NODE_EXTENSION",
    "NAPI_VERSION=10",       # expose node_api_* (v9/v10) symbols as extern "C"
    "NAPI_HAS_FAST_CALL=1",     # V8 (GN) track takes the real fast-call path; non-V8 (CMake) does not
    "NAPI_HAS_SCRIPT_CACHE=1",  # V8 has a real code cache (src/v8/script_cache.cc); non-V8 defaults unless it opts in
  ]
  include_dirs = [
    "//napi/include",
    "//include",  # V8 public headers (v8-context.h, libplatform/libplatform.h)
  ]

  # Instrument only our targets (this config) — not V8 core.
  if (napi_coverage) {
    cflags = [
      "-fprofile-instr-generate",
      "-fcoverage-mapping",
    ]
    ldflags = [
      "-fprofile-instr-generate",
      "-fcoverage-mapping",
    ]
  }
}
