executable("run") {
  testonly = true
  sources = [ "run.cc" ]
  configs += [
    "//napi/gn:napi_flags",
    "//:external_config",
  ]
  deps = [ "//napi/src/v8:napi_v8" ]
}

executable("runner") {
  testonly = true
  sources = [ "runner.cc" ]
  configs += [
    "//napi/gn:napi_flags",
    "//:external_config",
  ]
  deps = [ "//napi/src/v8:napi_v8" ]
}

executable("fast_call_gtest") {
  testonly = true
  sources = [ "fast_call_smoke.cc" ]
  configs += [
    "//napi/gn:napi_flags",
    "//:external_config",
  ]
  deps = [
    "//napi/src/v8:napi_v8",
    "//third_party/googletest:gtest",
    "//third_party/googletest:gtest_main",
  ]
}

executable("wrap_bench") {
  testonly = true
  sources = [ "wrap_bench.cc" ]
  configs += [
    "//napi/gn:napi_flags",
    "//:external_config",
  ]
  deps = [ "//napi/src/v8:napi_v8" ]
}

group("test") {
  testonly = true
  deps = [ ":run", ":runner", ":fast_call_gtest", ":wrap_bench" ]
}
