# Inspector subsystem: V8 inspector + WebSocket server backed by llhttp.

static_library("llhttp") {
  sources = [
    "//napi/vendor/llhttp/src/api.c",
    "//napi/vendor/llhttp/src/http.c",
    "//napi/vendor/llhttp/src/llhttp.c",
  ]
  include_dirs = [ "//napi/vendor/llhttp/include" ]
  cflags = [
    "-Wno-everything",
  ]
  public_configs = [ ":llhttp_public" ]
}

config("llhttp_public") {
  include_dirs = [ "//napi/vendor/llhttp/include" ]
}

source_set("inspector") {
  sources = [ "inspector_api.cc" ]
  if (!is_win) {
    # POSIX socket + libuv-free server only on POSIX (Linux/macOS/Android).
    sources += [
      "bridge.cc",
      "server.cc",
      "websocket.cc",
    ]
  }
  deps = []
  if (!is_win) {
    deps += [ ":llhttp" ]
  }
  configs += [
    "//napi/gn:napi_flags",
    "//:external_config",
  ]
  include_dirs = [
    "//napi/src/v8",   # for js_native_api_v8.h / _impl.h
  ]
  public_configs = [ ":llhttp_public" ]
}
